Fix cropper modal on upload page looks different

--- a/src/Backend/Modules/MediaLibrary/Layout/Css/MediaLibrary.css
+++ b/src/Backend/Modules/MediaLibrary/Layout/Css/MediaLibrary.css
@@ -166,7 +166,8 @@
 /**
  * Media Dialog
  */
-#addMediaDialog .modal-body {
+#addMediaDialog .modal-body,
+#cropperMediaDialog .modal-body {
   padding: 0;
   background: none;
   border: none;
